--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,7 @@ docs:
 app01: app01.o args.o
 
 csv-util.o csv-tool.o: csv.h
-APP03_OBJS = app03.o subcmd.o stl.o term.o temp.o csv-util.o csv-tool.o
+APP03_OBJS = app03.o subcmd.o stl.o term.o temp.o csv-util.o csv-tool.o mbs.o
 APP03_OBJS += xwin.o 
 APP03_OBJS += xt-proc.o
 APP03_OBJS += awt.o awt-util.o SmeCascade.o
