C++向けのヘッダファイルのサフィックスを .hppに変更
Cからも利用できるものは ,h とし、extern C の構文を付与した.

--- a/src/Makefile
+++ b/src/Makefile
@@ -76,7 +76,7 @@ endif
 app04: $(APP04_OBJS)
 
 subcmd.o: subcmd.h
-csv-util.o csv-tool.o: csv.h
+csv-util.o csv-tool.o: csv.hpp
 motif.o: mrmtest.uid
 
 mrmtest.uid: mrmtest.uil
