テキスト行読み込みのサンプル追加

--- a/src/Makefile
+++ b/src/Makefile
@@ -59,6 +59,7 @@ APP04_OBJS += xwin.o
 APP04_OBJS += xt-proc.o
 APP04_OBJS += awt.o awt-util.o SmeCascade.o
 APP04_OBJS += file-op.o
+APP04_OBJS += lineread.o
 
 ifdef USE_MOTIF
 CXXFLAGS += -DUSE_MOTIF
