bdb のサンプル・コード追加

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,7 @@ LDFLAGS += -lreadline -lhistory
 endif
 LDFLAGS += -lncursesw
 LDFLAGS += -ldb
+LDFLAGS += -lmecab -lsenna
 
 VERSION=0.1
 RPMBASE=~/rpm/SOURCES
@@ -64,6 +65,7 @@ APP04_OBJS += xt-proc.o
 APP04_OBJS += awt.o awt-util.o SmeCascade.o
 APP04_OBJS += file-op.o
 APP04_OBJS += lineread.o
+APP04_OBJS += index.o
 
 ifdef USE_MOTIF
 CXXFLAGS += -DUSE_MOTIF
