DBAの実装クラスとして QDBMを追加

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,7 @@ LDFLAGS += -lreadline -lhistory
 endif
 LDFLAGS += -lncursesw
 LDFLAGS += -ldb
+LDFLAGS += -lqdbm
 LDFLAGS += -lmecab -lsenna
 
 VERSION=0.1
