ndbm を使うkvsの検証コードを追加
コンパイラとリンクが通っただけで検証はこれから

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,6 +29,7 @@ endif
 LDFLAGS += -lncursesw
 LDFLAGS += -ldb
 LDFLAGS += -lqdbm
+LDFLAGS += -lgdbm
 LDFLAGS += -lmecab -lsenna
 
 LIBXML_CFLAGS = 
@@ -72,6 +73,7 @@ APP04_OBJS += file-op.o
 APP04_OBJS += lineread.o
 APP04_OBJS += index.o
 APP04_OBJS += xml.o
+APP04_OBJS += kvs-gdbm.o
 
 ifdef USE_MOTIF
 CXXFLAGS += -DUSE_MOTIF
