MySQLの接続マネージャの基本機能を実装

--- a/src/Makefile
+++ b/src/Makefile
@@ -79,7 +79,7 @@ LIBUC_OBJS += kvs-util.o kvs-bdb.o
 LIBUC_OBJS += kvs-ndbm.o
 LIBUC_OBJS += kvs-gdbm.o
 LIBUC_OBJS += kvs-qdbm.o
-LIBUC_OBJS += mysql-driver.o
+LIBUC_OBJS += mysql-driver.o mysql-tool.o
 LIBUC_OBJS += xt-proc.o
 LIBUC_OBJS += awt-util.o SmeCascade.o
 LIBUC_OBJS += index.o
